<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- input -->
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView 
            android:id="@+id/back_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginBottom="30dp"
        />

        <ImageView 
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:src="@drawable/login_welcome"
        />

        <!-- heading -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gunakan akun anda untuk melanjutkan ke aplikasi"
            android:fontFamily="@font/gilroybold"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/dark"
            android:textSize="21sp"
            android:lineSpacingExtra="8sp"/>

        <!-- nama pengguna -->
        <TextView
            android:fontFamily="@font/gilroybold"
            android:layout_marginTop="@dimen/margin_between"
            android:layout_marginBottom="@dimen/margin_between_label_to_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NAMA PENGGUNA"/>

        <EditText
            android:fontFamily="@font/gilroybold"
            android:id="@+id/sign_in_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cth. John"
            android:inputType="text"
            android:background="@null"
            android:textSize="20sp"
            />

        <!-- 6 digit kode otentikasi -->
        <TextView
            android:fontFamily="@font/gilroybold"
            android:layout_marginTop="@dimen/margin_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between_label_to_input"
            android:text="KODE OTENTIKASI"/>

        <EditText
            android:fontFamily="@font/gilroybold"
            android:id="@+id/sign_in_auth_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cth CX2"
            android:maxLength="6"
            android:inputType="numberPassword"
            android:background="@null"
            android:textSize="20dp"
            />

        <!-- memunculkan password -->
        <CheckBox
            android:layout_marginTop="15dp"
            android:id="@+id/show_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="TAMPILKAN KODE"
            android:textColor="#000"
            android:textSize="11sp"/>

    </LinearLayout>

    <!-- button -->
    <Button
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="LANJUTKAN"
        android:textSize="14sp"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_menu_2"
        android:fontFamily="@font/gilroybold"/>

    <include
        layout="@layout/_general_loading_anim"/>

</androidx.constraintlayout.widget.ConstraintLayout>